# peakweather-docs

./: .readthedocs.yaml  AUTHORS  LICENSE  README.md  example.py  pyproject.toml
docs/: TODO.md
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/examples/: peakweather_demo.ipynb
docs/source/modules/: dataset.rst  index.rst  io.rst  utils.rst
peakweather/: __init__.py  dataset.py  io.py  utils.py
